font and name spacing issues

--- a/public/css/profile_edit.css
+++ b/public/css/profile_edit.css
@@ -1,3 +1,24 @@
+@import url(//db.onlinewebfonts.com/c/eeb2719d248b27841be5f4899986eedc?family=Sentinel+Book);
+
+@font-face {
+    font-family: Sentinel_Book; 
+    src: url("//db.onlinewebfonts.com/t/eeb2719d248b27841be5f4899986eedc.eot"); 
+    src: url("//db.onlinewebfonts.com/t/eeb2719d248b27841be5f4899986eedc.eot?#iefix") format("embedded-opentype"), 
+    url("//db.onlinewebfonts.com/t/eeb2719d248b27841be5f4899986eedc.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/eeb2719d248b27841be5f4899986eedc.woff") format("woff"), url("//db.onlinewebfonts.com/t/eeb2719d248b27841be5f4899986eedc.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/eeb2719d248b27841be5f4899986eedc.svg#Sentinel Book") format("svg"); 
+}
+@font-face{
+    font-family: Poppins_Bold;
+    src: url(/Poppins-Bold.ttf);
+}
+@font-face{
+    font-family: Poppins_Medium_Regular;
+    src: url(/Poppins-Medium.ttf);
+}
+@font-face{
+    font-family: Poppins_SemiBold_Regular;
+    src: url(/Poppins-SemiBold.ttf);
+}
+
 .logo img {
     position: absolute;
     height: 50px;
@@ -5,7 +26,7 @@
     left: 20%;
 }
 #fprofpic{
-    right: 28%;
+    right: 28.5%;
     top: 1.5%;
     position: absolute;
     height: 7%;
@@ -14,12 +35,16 @@
 
 .fprofpic img{
     border-radius: 50%;
+    top: 2%;
+    right: 5%;
+    height: 5%;
+    width: 50%;
 }
 
 #search{
     position: absolute;
     margin-top: 10px;
-    right: 25%;
+    right: 30%;
     background-image: url(http://www.levenmetwater.nl/static/global/images/icon-search.png);
     background-position: 10px center;
     background-repeat: no-repeat;
@@ -64,6 +89,7 @@
     right: 17%;
     margin-top: 0%;
     /* border: 1px solid rgba(153, 150, 150, 0.116); */
+    font-family: Poppins_Medium_Regular;
 }
 
 .dropdown-arrowcontent{
@@ -75,12 +101,22 @@
     /* margin-top: 250%; */
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    font-family: Poppins_Medium_Regular;
 }
 .droparrow:hover {
     display: block;
 }
 
-.fpname{
+.name{
+    top: 3%;
+    position: absolute;
+    right: 12.5%;
+    width: 15%;
+    font-family: Poppins_Bold;
+    display: inline;
+}
+
+/* .fpname{
     top: 3%;
     position: absolute;
     right: 23.5%;
@@ -92,7 +128,7 @@
     position: absolute;
     right: 20%;
     width: 4%;
-}
+} */
 
 #profile-pic{
     position: absolute;
@@ -120,7 +156,7 @@ button{
 
 #Submit{
     right: 31.5%;
-    top: -1.5%;
+    top: 1.0%;
     position: absolute;
     border-radius: 50%;
 }
@@ -159,36 +195,43 @@ hr{
 input[type=text]{
     display: block;
     padding: 2% 1%;
+    font-family: Poppins_Medium_Regular;
 }
 
 
 label{
     display: block;
     font-weight: bold;
+    font-family: Poppins_Medium_Regular;
 }
 
 label[for=firstname]{
     position: absolute;
     top: 51%;
+    font-family: Poppins_Medium_Regular;
 }
 input[name=firstname]{
     position: absolute;
     top: 54.5%;
+    font-family: Poppins_Medium_Regular;
 }
 
 label[for=lastname]{
     position: absolute;
     top: 51%;
     left: 41%;
+    font-family: Poppins_Medium_Regular;
 }
 input[name=lastname]{
     position: absolute;
     top: 54.5%;
     left: 41%;
+    font-family: Poppins_Medium_Regular;
 }
 label[for=bio]{
     position: absolute;
     top: 64%;
+    font-family: Poppins_Medium_Regular;
 }
 textarea{
     position: absolute;
@@ -200,11 +243,13 @@ textarea{
 label[for=zipcode]{
     position: absolute;
     top: 84.5%;
+    font-family: Poppins_Medium_Regular;
 }
 
 input[name=zipcode]{
     position: absolute;
     top: 88%;
+    font-family: Poppins_Medium_Regular;
 }
 
 #submitBtn{
@@ -239,7 +284,8 @@ input[name=zipcode]{
 
 #desc{
     position: absolute;
-    top: 15%;
+    top: 14.5%;
+    font-family: Poppins_Medium_Regular;
 }
 
 #edit_profile{
@@ -247,6 +293,7 @@ input[name=zipcode]{
     top: 30%;
     left: 15%;
     font-size: 20px;
+    font-family: Poppins_Medium_Regular;
 }
 
 #account_settings{
@@ -254,6 +301,7 @@ input[name=zipcode]{
     top: 40%;
     left: 15%;
     font-size: 20px;
+    font-family: Poppins_Medium_Regular;
 }
 
 #edit_profile:after {
